Fix: Move all files to public folder and update Vercel config for proper static file serving

--- a/public/index.html
+++ b/public/index.html
@@ -727,7 +727,7 @@
     <section class="hero" id="inicio">
         <div class="hero-content">
             <div class="hero-logo">
-                <img src="Logo.png" alt="Astronomical Logo">
+                <img src="/logo.png" alt="Astronomical Logo">
             </div>
             <p>La mejor experiencia nocturna de San Pedro Sula</p>
             <div class="cta-buttons">
@@ -753,7 +753,7 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/La gran banda.jpeg" alt="La Gran Banda" class="event-image">
+                <img src="/Eventos/la-gran-banda.jpeg" alt="La Gran Banda" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Viernes 15 de Diciembre</div>
                     <div class="event-title">La Gran Banda</div>
@@ -762,7 +762,7 @@
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/Conjuro Party.jpg" alt="El Conjuro Halloween Party" class="event-image">
+                <img src="/Eventos/conjuro-party.jpg" alt="El Conjuro Halloween Party" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Sábado 16 de Diciembre</div>
                     <div class="event-title">El Conjuro Halloween Party</div>
@@ -836,7 +836,7 @@
     <footer class="footer" id="contacto">
         <div class="footer-content">
             <div class="footer-logo">
-                    <img src="Logo.png" alt="Astronomical Logo">
+                    <img src="/logo.png" alt="Astronomical Logo">
             </div>
             <div class="footer-social">
                 <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
