Update website content and meta information

--- a/Index.html
+++ b/Index.html
@@ -56,9 +56,9 @@
     {
         "@context": "https://schema.org",
         "@type": "NightClub",
-        "name": "Astronomical Discoteca",
-        "alternateName": "Astronomical SPS",
-        "description": "La mejor discoteca de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento disponible.",
+        "name": "La Gran Casa Blanca",
+        "alternateName": "La Gran Casa Blanca SPS",
+        "description": "Astronomical, Studio 54 y La Gran Casa Blanca, el mejor ambiente de San Pedro Sula, Honduras.",
         "url": "https://astronomical-sps.vercel.app",
         "logo": "https://astronomical-sps.vercel.app/logo.png",
         "image": "https://astronomical-sps.vercel.app/logo.png",
@@ -756,7 +756,7 @@
             <div class="event-card fade-in">
                 <img src="https://astronomical-sps.vercel.app/Eventos/la-gran-banda.jpeg" alt="La Gran Banda" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 15 de Diciembre</div>
+                    <div class="event-date">Viernes 17 de Octubre</div>
                     <div class="event-title">La Gran Banda</div>
                     <div class="event-description">Una noche llena de música en vivo con las mejores bandas de Honduras</div>
                     <a href="https://bmticket.com/eventos/la-gran-banda/" class="btn btn-primary">Comprar Entradas</a>
@@ -765,7 +765,7 @@
             <div class="event-card fade-in">
                 <img src="https://astronomical-sps.vercel.app/Eventos/conjuro-party.jpg" alt="El Conjuro Halloween Party" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 16 de Diciembre</div>
+                    <div class="event-date">Sabado 1 de Noviembre</div>
                     <div class="event-title">El Conjuro Halloween Party</div>
                     <div class="event-description">Una fiesta de disfraces épica con la mejor música y ambiente</div>
                     <a href="https://bmticket.com/eventos/el-conjuro-halloween-party/" class="btn btn-primary">Comprar Entradas</a>
@@ -773,7 +773,7 @@
             </div>
             <div class="coming-soon-card fade-in">
                 <div class="coming-soon-title">PRÓXIMAMENTE</div>
-                <a href="https://www.instagram.com/astronomical_sps/" class="btn btn-secondary">Más Información</a>
+                <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-secondary">Más Información</a>
             </div>
         </div>
     </section>
@@ -843,7 +843,7 @@
                 <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://www.instagram.com/astronomical_sps/" class="social-link instagram-link" title="Instagram">
+                <a href="https://www.instagram.com/casablanca_sps/" class="social-link instagram-link" title="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61576409706854" class="social-link facebook-link" title="Facebook">
