--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astronomical - La Mejor Discoteca de San Pedro Sula, Honduras | Eventos Nocturnos</title>
-    <meta name="description" content="Astronomical es la discoteca #1 de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento. Ubicado en CA-5. ¡Reserva tu mesa ahora!">
-    <meta name="keywords" content="discoteca san pedro sula, astronomical discoteca, fiesta san pedro sula, eventos nocturnos honduras, musica en vivo honduras, zona vip san pedro sula, nightclub honduras, bar san pedro sula, fiesta ca-5, eventos astronomicos, discoteca cortes, musica electronica honduras, fiesta weekend san pedro sula, reserva mesa discoteca, estacionamiento discoteca, taxi zona discoteca, la gran banda honduras, conjuro halloween party, eventos diciembre san pedro sula, fiesta año nuevo honduras, musica reggaeton honduras, dj san pedro sula, fiesta jovenes honduras, discoteca moderna san pedro sula, eventos especiales honduras, fiesta corporativa san pedro sula, cumpleaños discoteca, despedida soltero honduras, musica latina honduras, fiesta tematica san pedro sula, eventos musica en vivo, discoteca premium honduras, fiesta empresarial san pedro sula, musica internacional honduras, eventos privados discoteca, fiesta graduacion honduras, musica urbana san pedro sula, eventos deportivos discoteca, fiesta familiar honduras, musica rock honduras, eventos culturales san pedro sula, fiesta universitaria honduras, musica pop san pedro sula, eventos benéficos discoteca, fiesta comunitaria honduras, musica alternativa honduras, eventos religiosos san pedro sula, fiesta tradicional honduras, musica folk honduras, eventos gastronomicos discoteca">
+    <title>La Gran Casa Blanca - 3 Ambientes, una sola casa San Pedro Sula, Honduras | Eventos Nocturnos</title>
+    <!-- Updated: Using absolute URLs for images - Final fix -->
+    <meta name="description" content="Astronomical, Studio 54 y La gran casa blanca, el mejor ambiente de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento. Ubicado en CA-5. ¡Reserva tu mesa ahora!">
+    <meta name="keywords" content="discoteca san pedro sula, astronomical discoteca, la gran casa blanca, studio 54, la gran casa blanca beer garden, beer garden, fiesta san pedro sula, eventos nocturnos honduras, musica en vivo honduras, zona vip san pedro sula, nightclub honduras, bar san pedro sula, fiesta ca-5, eventos astronomicos, discoteca cortes, musica electronica honduras, fiesta weekend san pedro sula, reserva mesa discoteca, estacionamiento discoteca, taxi zona discoteca, la gran banda honduras, conjuro halloween party, eventos diciembre san pedro sula, fiesta año nuevo honduras, musica reggaeton honduras, dj san pedro sula, fiesta jovenes honduras, discoteca moderna san pedro sula, eventos especiales honduras, fiesta corporativa san pedro sula, cumpleaños discoteca, despedida soltero honduras, musica latina honduras, fiesta tematica san pedro sula, eventos musica en vivo, discoteca premium honduras, fiesta empresarial san pedro sula, musica internacional honduras, eventos privados discoteca, fiesta graduacion honduras, musica urbana san pedro sula, eventos deportivos discoteca, fiesta familiar honduras, musica rock honduras, eventos culturales san pedro sula, fiesta universitaria honduras, musica pop san pedro sula, eventos benéficos discoteca, fiesta comunitaria honduras, musica alternativa honduras, eventos religiosos san pedro sula, fiesta tradicional honduras, musica folk honduras, eventos gastronomicos discoteca">
     
     <!-- SEO Meta Tags -->
     <meta name="author" content="Astronomical Discoteca">
@@ -99,7 +100,7 @@
             }
         ],
         "sameAs": [
-            "https://www.instagram.com/astronomical_sps/",
+            "https://www.instagram.com/casablanca_sps/",
             "https://www.facebook.com/profile.php?id=61576409706854"
         ]
     }
@@ -810,9 +811,9 @@
     <section class="hero" id="inicio">
         <div class="hero-content">
             <div class="hero-logo">
-                <img src="/studio54.png" alt="Studio 54 Logo" class="hero-logo-item">
                 <img src="/logo.png" alt="Astronomical Logo" class="hero-logo-item">
-                <img src="/casablanca blanco.png" alt="Casa Blanca Logo" class="hero-logo-item">
+                <img src="/studio54.png" alt="Studio 54 Logo" class="hero-logo-item">
+                <img src="/casablancadorado.png" alt="Casa Blanca Logo" class="hero-logo-item">
             </div>
             <p>La mejor experiencia nocturna de San Pedro Sula</p>
             <div class="cta-buttons">
@@ -823,7 +824,7 @@
                 <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://www.instagram.com/astronomical_sps/" class="social-link instagram-link" title="Instagram">
+                <a href="https://www.instagram.com/casablanca_sps/" class="social-link instagram-link" title="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61576409706854" class="social-link facebook-link" title="Facebook">
@@ -865,7 +866,7 @@
             <div class="event-card fade-in">
                 <img src="/Eventos/la-gran-banda.jpeg" alt="La Gran Banda" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 15 de Diciembre</div>
+                    <div class="event-date">Viernes 17 de Octubre</div>
                     <div class="event-title">La Gran Banda</div>
                     <div class="event-description">Una noche llena de música en vivo con las mejores bandas de Honduras</div>
                     <a href="https://bmticket.com/eventos/la-gran-banda/" class="btn btn-primary">Comprar Entradas</a>
@@ -874,7 +875,7 @@
             <div class="event-card fade-in">
                 <img src="/Eventos/conjuro-party.jpg" alt="El Conjuro Halloween Party" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 16 de Diciembre</div>
+                    <div class="event-date">Sábado 1 de Noviembre</div>
                     <div class="event-title">El Conjuro Halloween Party</div>
                     <div class="event-description">Una fiesta de disfraces épica con la mejor música y ambiente</div>
                     <a href="https://bmticket.com/eventos/el-conjuro-halloween-party/" class="btn btn-primary">Comprar Entradas</a>
@@ -882,7 +883,7 @@
             </div>
             <div class="coming-soon-card fade-in">
                 <div class="coming-soon-title">PRÓXIMAMENTE</div>
-                <a href="https://www.instagram.com/astronomical_sps/" class="btn btn-secondary">Más Información</a>
+                <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-secondary">Más Información</a>
             </div>
         </div>
     </section>
@@ -954,7 +955,7 @@
                 <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://www.instagram.com/astronomical_sps/" class="social-link instagram-link" title="Instagram">
+                <a href="https://www.instagram.com/casablanca_sps/" class="social-link instagram-link" title="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61576409706854" class="social-link facebook-link" title="Facebook">
