Update index.html with latest changes

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
     {
         "@context": "https://schema.org",
         "@type": "NightClub",
-        "name": "Astronomical Discoteca",
-        "alternateName": "Astronomical SPS",
-        "description": "La mejor discoteca de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento disponible.",
+        "name": "La Gran Casa Blanca",
+        "alternateName": "La Gran Casa Blanca SPS",
+        "description": "Astronomical, Studio 54 y La gran casa blanca, el mejor ambiente de San Pedro Sula, Honduras.",
         "url": "https://astronomical-sps.vercel.app",
         "logo": "https://astronomical-sps.vercel.app/casablancadorado.png",
         "image": "https://astronomical-sps.vercel.app/casablancadorado.png",
