Update Context.txt and public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="La Gran Casa Blanca - El Mejor Ambiente Nocturno de San Pedro Sula, Honduras">
-    <meta property="og:description" content="La Gran Casa Blanca es el complejo nocturno #1 de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento. ¡Reserva tu mesa ahora!">
+    <meta property="og:description" content="La Gran Casa Blanca es el ambiente nocturno #1 de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento. ¡Reserva tu mesa ahora!">
     <meta property="og:type" content="business.business">
     <meta property="og:url" content="https://www.lagrancasablanca.com/">
     <meta property="og:image" content="https://www.lagrancasablanca.com/casablancadorado.png">
@@ -58,7 +58,7 @@
         "@type": "NightClub",
         "name": "La Gran Casa Blanca",
         "alternateName": "La Gran Casa Blanca SPS",
-        "description": "La Gran Casa Blanca, el mejor complejo nocturno de San Pedro Sula, Honduras. Astronomical, Studio 54 y Casa Blanca.",
+        "description": "La Gran Casa Blanca, el mejor ambiente nocturno de San Pedro Sula, Honduras. Astronomical, Studio 54 y Casa Blanca.",
         "url": "https://www.lagrancasablanca.com/",
         "logo": "https://www.lagrancasablanca.com/casablancadorado.png",
         "image": "https://www.lagrancasablanca.com/casablancadorado.png",
@@ -828,7 +828,7 @@
             <p>La mejor experiencia nocturna de San Pedro Sula</p>
             <div class="cta-buttons">
                 <a href="#eventos" class="btn btn-primary">Ver Eventos</a>
-                <a href="https://wa.me/504XXXXXXXXX" class="btn btn-secondary">Contactar</a>
+                <a href="https://wa.me/50494373757" class="btn btn-secondary">Contactar</a>
             </div>
             <div class="social-links">
                 <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
@@ -962,7 +962,7 @@
                 <img src="/logo.png" alt="Astronomical Logo" class="footer-logo-item">
             </div>
             <div class="footer-social">
-                <a href="https://wa.me/504XXXXXXXXX" class="social-link whatsapp-link" title="WhatsApp">
+                <a href="https://wa.me/50494373757" class="social-link whatsapp-link" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
                 <a href="https://www.instagram.com/casablanca_sps/" class="social-link instagram-link" title="Instagram">
