Update event: Replace La Gran Banda with CONFETTIS Last Tour event

--- a/public/index.html
+++ b/public/index.html
@@ -874,12 +874,12 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="/Eventos/la-gran-banda.jpeg" alt="La Gran Banda" class="event-image">
+                <img src="/Eventos/confetti.png" alt="Confettis Last Tour" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 17 de Octubre</div>
-                    <div class="event-title">La Gran Banda</div>
-                    <div class="event-description">Una noche llena de música en vivo con las mejores bandas de Honduras</div>
-                    <a href="https://bmticket.com/eventos/la-gran-banda/" class="btn btn-primary">Comprar Entradas</a>
+                    <div class="event-date">Sábado 15 de Noviembre</div>
+                    <div class="event-title">CONFETTIS Last Tour</div>
+                    <div class="event-description">Regresa la noche de CONFETTIS a Casa Blanca. El próximo sábado 15 de noviembre te esperamos para bailar hasta el amanecer junto a los DJ originales</div>
+                    <a href="https://bmticket.com/eventos/confettis-last-tour/" class="btn btn-primary">Comprar Entradas</a>
                 </div>
             </div>
             <div class="event-card fade-in">
