Fix image reference: Update confetti.png to Confeti.png (correct case)

--- a/public/index.html
+++ b/public/index.html
@@ -874,7 +874,7 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="/Eventos/confetti.png" alt="Confettis Last Tour" class="event-image">
+                <img src="/Eventos/Confeti.png" alt="Confettis Last Tour" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Sábado 15 de Noviembre</div>
                     <div class="event-title">CONFETTIS Last Tour</div>
