feat(events): add La VersÃ¡til (28 Nov) and Astronomical Carshow (15 Nov); link buttons to Instagram

--- a/public/index.html
+++ b/public/index.html
@@ -891,6 +891,24 @@
                     <a href="https://bmticket.com/eventos/el-conjuro-halloween-party/" class="btn btn-primary">Comprar Entradas</a>
                 </div>
             </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/laversatil28nov25.jpg" alt="La Versátil en Vivo" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Viernes 28 de Noviembre</div>
+                    <div class="event-title">La Versátil</div>
+                    <div class="event-description">Noche de música en vivo en Beer Garden. ¡No te la pierdas!</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/Carshow15nov25.jpg" alt="Astronomical Carshow" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Sábado 15 de Noviembre</div>
+                    <div class="event-title">Astronomical Carshow</div>
+                    <div class="event-description">Mezcla de música, show y autos modificados. Desde las 6:00 PM.</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
             <div class="coming-soon-card fade-in">
                 <div class="coming-soon-title">PRÓXIMAMENTE</div>
                 <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-secondary">Más Información</a>
