feat(events): add La Gran Banda, Viernes de Precopeo, and ASTRO RASPE events; order events chronologically; update all buttons to redirect to Instagram

--- a/public/index.html
+++ b/public/index.html
@@ -874,29 +874,47 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/Confeti.png" alt="Confettis Last Tour" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 15 de Noviembre</div>
-                    <div class="event-title">CONFETTIS Last Tour</div>
-                    <div class="event-description">Regresa la noche de CONFETTIS a Casa Blanca. El próximo sábado 15 de noviembre te esperamos para bailar hasta el amanecer junto a los DJ originales</div>
-                    <a href="https://bmticket.com/eventos/confettis-last-tour/" class="btn btn-primary">Comprar Entradas</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
                 <img src="/Eventos/conjuro-party.jpg" alt="El Conjuro Halloween Party" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Sábado 1 de Noviembre</div>
                     <div class="event-title">El Conjuro Halloween Party</div>
                     <div class="event-description">Una fiesta de disfraces épica con la mejor música y ambiente</div>
-                    <a href="https://bmticket.com/eventos/el-conjuro-halloween-party/" class="btn btn-primary">Comprar Entradas</a>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/laversatil28nov25.jpg" alt="La Versátil en Vivo" class="event-image">
+                <img src="Eventos/110725 Viernes Precopeo.png" alt="Viernes de Precopeo" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 28 de Noviembre</div>
-                    <div class="event-title">La Versátil</div>
-                    <div class="event-description">Noche de música en vivo en Beer Garden. ¡No te la pierdas!</div>
+                    <div class="event-date">Viernes 7 de Noviembre</div>
+                    <div class="event-title">Viernes de Precopeo</div>
+                    <div class="event-description">Promociones especiales de 5:00 PM a 9:00 PM. 3x2 en cócteles, sangrías, whisky y ron. L. 15 alitas, L. 50 x 2 tequilas, L. 280 cubetazo nacional + fundido gratis.</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/110725 lagranbanda.png" alt="La Gran Banda" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Viernes 7 de Noviembre - 9:00 PM</div>
+                    <div class="event-title">La Gran Banda</div>
+                    <div class="event-description">Música en vivo con La Gran Banda en Beer Garden. Cover: L. 300</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/110825 raspe.png" alt="ASTRO RASPE DEL TERROR" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Sábado 8 de Noviembre</div>
+                    <div class="event-title">ASTRO RASPE DEL TERROR</div>
+                    <div class="event-description">Noche temática espacial del terror. Music by: DJ DUPLEX. Cover: L. 150</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/Confeti.png" alt="Confettis Last Tour" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Sábado 15 de Noviembre</div>
+                    <div class="event-title">CONFETTIS Last Tour</div>
+                    <div class="event-description">Regresa la noche de CONFETTIS a Casa Blanca. El próximo sábado 15 de noviembre te esperamos para bailar hasta el amanecer junto a los DJ originales</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
@@ -906,6 +924,15 @@
                     <div class="event-date">Sábado 15 de Noviembre</div>
                     <div class="event-title">Astronomical Carshow</div>
                     <div class="event-description">Mezcla de música, show y autos modificados. Desde las 6:00 PM.</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/laversatil28nov25.jpg" alt="La Versátil en Vivo" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Viernes 28 de Noviembre</div>
+                    <div class="event-title">La Versátil</div>
+                    <div class="event-description">Noche de música en vivo en Beer Garden. ¡No te la pierdas!</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
