feat(events): update events with ASTRO RASPE, WINTER PARTY, and KPOP RAVE; remove old events

--- a/public/index.html
+++ b/public/index.html
@@ -887,56 +887,29 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/110725 Viernes Precopeo.png" alt="Viernes de Precopeo" class="event-image">
+                <img src="Eventos/astroraspe051225.jpeg" alt="ASTRO RASPE" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 7 de Noviembre</div>
-                    <div class="event-title">Viernes de Precopeo</div>
-                    <div class="event-description">Promociones especiales de 5:00 PM a 9:00 PM. 3x2 en cócteles, sangrías, whisky y ron. L. 15 alitas, L. 50 x 2 tequilas, L. 280 cubetazo nacional + fundido gratis.</div>
+                    <div class="event-date">Viernes 5 de Diciembre</div>
+                    <div class="event-title">ASTRO RASPE</div>
+                    <div class="event-description">Music by: DJ DUPLEX. Cover: L. 100. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/110725 lagranbanda.png" alt="La Gran Banda" class="event-image">
+                <img src="Eventos/winterparty061225.jpeg" alt="WINTER PARTY" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 7 de Noviembre - 9:00 PM</div>
-                    <div class="event-title">La Gran Banda</div>
-                    <div class="event-description">Música en vivo con La Gran Banda en Beer Garden. Cover: L. 300</div>
+                    <div class="event-date">Sábado 6 de Diciembre</div>
+                    <div class="event-title">WINTER PARTY</div>
+                    <div class="event-description">Dress code: Hoodies, chaquetas, gorros. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/110825 raspe.png" alt="ASTRO RASPE DEL TERROR" class="event-image">
+                <img src="Eventos/kpoprave131225.jpeg" alt="KPOP RAVE" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 8 de Noviembre</div>
-                    <div class="event-title">ASTRO RASPE DEL TERROR</div>
-                    <div class="event-description">Noche temática espacial del terror. Music by: DJ DUPLEX. Cover: L. 150</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/Confeti.png" alt="Confettis Last Tour" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 15 de Noviembre</div>
-                    <div class="event-title">CONFETTIS Last Tour</div>
-                    <div class="event-description">Regresa la noche de CONFETTIS a Casa Blanca. El próximo sábado 15 de noviembre te esperamos para bailar hasta el amanecer junto a los DJ originales</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/Carshow15nov25.jpg" alt="Astronomical Carshow" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 15 de Noviembre</div>
-                    <div class="event-title">Astronomical Carshow</div>
-                    <div class="event-description">Mezcla de música, show y autos modificados. Desde las 6:00 PM.</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/laversatil28nov25.jpg" alt="La Versátil en Vivo" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Viernes 28 de Noviembre</div>
-                    <div class="event-title">La Versátil</div>
-                    <div class="event-description">Noche de música en vivo en Beer Garden. ¡No te la pierdas!</div>
+                    <div class="event-date">Sábado 13 de Diciembre - 5:00 PM</div>
+                    <div class="event-title">KPOP RAVE</div>
+                    <div class="event-description">Baila al ritmo de K-pop 2da - 5ta gen. Boleto: L. 200 (incluye recuerdo sorpresa). Reservas: +504 8789-8257</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
