feat(events): update events with Precopeo, AL CHILE RASPE, Bad Bunny tribute, and Strippers show; remove past events

--- a/public/index.html
+++ b/public/index.html
@@ -887,29 +887,38 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/astroraspe051225.jpeg" alt="ASTRO RASPE" class="event-image">
+                <img src="Eventos/precopeo121225.jpeg" alt="Viernes de Precopeo" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 5 de Diciembre</div>
-                    <div class="event-title">ASTRO RASPE</div>
-                    <div class="event-description">Music by: DJ DUPLEX. Cover: L. 100. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Viernes 12 de Diciembre - 5:00 PM a 9:00 PM</div>
+                    <div class="event-title">Viernes de Precopeo</div>
+                    <div class="event-description">Promociones especiales: 3x2 en cócteles, whisky y ron. L. 15 alitas, L. 50 x 2 tequilas, L. 300 cubetazo nacional + fundido gratis, 2x1 copa de vino. Válidas únicamente en Beer Garden.</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/winterparty061225.jpeg" alt="WINTER PARTY" class="event-image">
+                <img src="Eventos/alchile131225.jpeg" alt="AL CHILE RASPE PARTY" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 6 de Diciembre</div>
-                    <div class="event-title">WINTER PARTY</div>
-                    <div class="event-description">Dress code: Hoodies, chaquetas, gorros. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Sábado 13 de Diciembre</div>
+                    <div class="event-title">AL CHILE RASPE PARTY</div>
+                    <div class="event-description">Con Big Chacha, KD La Caracola y Anthony Bodden. Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/kpoprave131225.jpeg" alt="KPOP RAVE" class="event-image">
+                <img src="Eventos/badbunny201225.jpeg" alt="Tributo a Bad Bunny" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 13 de Diciembre - 5:00 PM</div>
-                    <div class="event-title">KPOP RAVE</div>
-                    <div class="event-description">Baila al ritmo de K-pop 2da - 5ta gen. Boleto: L. 200 (incluye recuerdo sorpresa). Reservas: +504 8789-8257</div>
+                    <div class="event-date">Sábado 20 de Diciembre</div>
+                    <div class="event-title">Tributo a Bad Bunny</div>
+                    <div class="event-description">Noche especial dedicada a Bad Bunny. Cover: L. 300. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/strippers201225.jpeg" alt="Show de Strippers" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Sábado 20 de Diciembre</div>
+                    <div class="event-title">Show de Strippers - Studio 54</div>
+                    <div class="event-description">Evento 18+. Cover: L. 300. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
