--- a/public/index.html
+++ b/public/index.html
@@ -887,38 +887,20 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/precopeo121225.jpeg" alt="Viernes de Precopeo" class="event-image">
+                <img src="Eventos/Navidad241225.jpeg" alt="Felices Fiestas - La Gran Banda" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 12 de Diciembre - 5:00 PM a 9:00 PM</div>
-                    <div class="event-title">Viernes de Precopeo</div>
-                    <div class="event-description">Promociones especiales: 3x2 en cócteles, whisky y ron. L. 15 alitas, L. 50 x 2 tequilas, L. 300 cubetazo nacional + fundido gratis, 2x1 copa de vino. Válidas únicamente en Beer Garden.</div>
+                    <div class="event-date">Miércoles 24 de Diciembre - 11:30 PM</div>
+                    <div class="event-title">Felices Fiestas - La Gran Banda</div>
+                    <div class="event-description">Show en vivo con La Gran Banda en Casa Blanca Beer Garden. Pre-venta: L. 350 | Taquilla: L. 400. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/alchile131225.jpeg" alt="AL CHILE RASPE PARTY" class="event-image">
+                <img src="Eventos/Astronavidad241225.jpeg" alt="Un Diciembre Para Recordar" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 13 de Diciembre</div>
-                    <div class="event-title">AL CHILE RASPE PARTY</div>
-                    <div class="event-description">Con Big Chacha, KD La Caracola y Anthony Bodden. Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/badbunny201225.jpeg" alt="Tributo a Bad Bunny" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 20 de Diciembre</div>
-                    <div class="event-title">Tributo a Bad Bunny</div>
-                    <div class="event-description">Noche especial dedicada a Bad Bunny. Cover: L. 300. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/strippers201225.jpeg" alt="Show de Strippers" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 20 de Diciembre</div>
-                    <div class="event-title">Show de Strippers - Studio 54</div>
-                    <div class="event-description">Evento 18+. Cover: L. 300. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Miércoles 24 de Diciembre - 11:30 PM</div>
+                    <div class="event-title">Un Diciembre Para Recordar</div>
+                    <div class="event-description">Noche temática navideña especial. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
